TuxGuitar 2.0.1 (2025-12-22) changes:

* Fix note duration change when empty space in measure is longer than a whole
* Fix saving tempo base

TuxGuitar 2.0.0 (2025-11-02) changes:

* New file format, not readable by older versions
* New "free edition mode", authorizing invalid measures
* Possibility to add line breaks
* Number of frets is now configurable per track
* Possibility to force enharmonic representation of each note (e.g. G# or Ab)
* Base duration for tempo is now configurable, not necessarily a quarter
* Added pick stroke up/down effect on beat
* Main toolbar reworked, and fully configurable
* Enable ASCII export on Android
* Remove the outdated skins Ersplus, blue_serious, Lavender
* Fix an old issue with tuplets that could lead to invalid measures
* Fix pitch of audio unit plugin on macOS
* Fix mouse sensitivity for click & drag selection
* Option to apply key signature to selection
* Better handling of tied notes
* Import TEF v3 files
* Improved MusicXML, ASCII, pdf and svg export
* Improved Guitar Pro import
* Allow customization of the soundbank for macOS
* Adapt caret color in track table according to background
* New option to set how long the count-in is in Player
* Improvement of piano interface
* New option to play beats when moving cursor
* Breeze is now the default skin
* Logo and splash screen updated
* Many small improvements and cleanups

TuxGuitar 1.6.6 (2024-12-27) changes:

* Fixed several issues when first track is muted
* Improved TEF v2 import

TuxGuitar 1.6.5 (2024-12-14) changes:

* Add zoom control for Print/Export to pdf
* Restore scrollbars during playback
* Better support for upgrading an existing installation on Windows
* Improved GP import
* Save/restore player mode when switching tabs
* Export only audible tracks to MIDI and audio files
* Fix paste selection issue
* Fix playback of alternative repeats
* Fix playback of grace notes in percussion tracks
* Correctly consider new default shortcuts after an upgrade