@@ -2,6 +2,7 @@ TuxGuitar 2.0.1 (2025-12-22) changes:
 
 * Fix note duration change when empty space in measure is longer than a whole
 * Fix saving tempo base
+* Fix gp/zip and gpx file detection on Linux
 
 TuxGuitar 2.0.0 (2025-11-02) changes:
 
